# polymer_gc

./: .gitignore  pyproject.toml
datasets/random_architecture/: analyze_dataset.py  load_graphs.py  make.py  make_entries.py  make_sec.py  make_targets.py  model.py  pypeline.py  train.py
datasets/tg_jablonka/: dataviz.py  fill_db.py  train.py
examples/: optimization_pipeline.py
notebooks/: poly_make.ipynb  pred_mn.ipynb
runs/: .gitignore  tg_bj_fp_default.py  tg_bj_polybert_default.py  tg_bj_polybert_optim.py  tg_j_bj_polybert.py  tg_jab.py
src/notebooks/: pred_mn.ipynb
src/polymer_gc/: __init__.py  embeddings.py  polymer_graph.py  sec.py
src/polymer_gc/core/: __init__.py  dataset.py  exceptions.py  graph.py  monomer.py  registry.py  structures.py
src/polymer_gc/data/: database.py  dataset.py  graphs.py  sec.py
src/polymer_gc/data/basemodels/: core.py  structures.py
src/polymer_gc/datasets/tg_bayreuth_jena/: __init__.py  fill_db.py  flory_fox_params_ds.csv  tg_data.csv
src/polymer_gc/datasets/tg_jablonka/: fill_db.py
src/polymer_gc/graph/: __init__.py  architectures.py  branched.py  datamodel.py  linear.py  maker.py  plot.py  props.py  rings.py  star.py  utils.py
src/polymer_gc/model/: _build.py  base.py  data.py  train.py
src/polymer_gc/pipelines/: evaluation.py  interfere.py  load.py  optimize.py  stats.py  training.py
src/polymer_gc/plots/: __init__.py
src/polymer_gc/utils/: graph_input.py  pdi.py
src/polymer_gc/visualization/: __init__.py  example_usage.py  kfold_analysis.py  plots.py  style.py  utils.py
tests/: conftest.py  test_sec.py
tests/core/: test_exceptions.py  test_monomer.py  test_registry.py
tests/graph/: test_datamodel.py  test_linear.py  test_props.py
