[project]
name = "polymer-gc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "captum>=0.7.0",
    "latex>=0.7.0",
    "lxml>=5.4.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numba>=0.61.2",
    "numpy>=2.2.4",
    "pybind11>=2.13.6",
    "pydantic>=2.11.4",
    "rdkit>=2024.9.6",
    "scienceplots>=2.1.1",
    "scipy>=1.15.2",
    "secanalysis>=0.1.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
]


[project.optional-dependencies]
cpu = [
  "torch>=2.6.0",
]
cu126 = [
  "torch>=2.6.0",
]
polybert = [
    "sentence-transformers>=4.1.0",
]


[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]


[build-system]
requires = [ "setuptools>70",]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { ""= "src" }
